apps/minio/app/30_middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-ui
  namespace: minio
spec:
  stripPrefix:
    prefixes:
      - /minio/ui
