apps/minio/app/40_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`minio.trivernis.dev`, `minio.trivernis.net`) && PathPrefix(`/minio/ui`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
      - name: stripprefix-ui
    services:
    - name: minio
      port: minio-console
  - match: Host(`minio.trivernis.dev`, `minio.trivernis.net`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: minio
      port: minio-api
